tests/baselines/reference/overloadsWithProvisionalErrors.errors.txt
==== tests/cases/compiler/overloadsWithProvisionalErrors.ts (6 errors) ====
    var func: {
        (s: string): number;
        (lambda: (s: string) => { a: number; b: number }): string;
    };
    
    func(s => ({})); // Error for no applicable overload (object type is missing a and b)
    ~~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type '(s: any) => {}'.
    ~~~~
!!! error TS2087: Could not select overload for 'call' expression.
    func(s => ({ a: blah, b: 3 })); // Only error inside the function, but not outside (since it would be applicable if not for the provisional error)
                    ~~~~
!!! error TS2095: Could not find symbol 'blah'.
    func(s => ({ a: blah })); // Two errors here, one for blah not being defined, and one for the overload since it would not be applicable anyway
    ~~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type '(s: any) => { a: any; }'.
    ~~~~
!!! error TS2087: Could not select overload for 'call' expression.
                    ~~~~
!!! error TS2095: Could not find symbol 'blah'.